--- a/leyes.html
+++ b/leyes.html
@@ -11,6 +11,7 @@
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/leyes.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -19,7 +20,6 @@
     <h1>Leyes Transitorias de Hernavia</h1>
 </header>
 
-<!-- Nav incrustado -->
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -32,34 +32,34 @@
 </nav>
 
 <main>
-    <section class="section">
+    <section class="texto-largo">
         <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
         <p>Un ciudadano podrá perder su ciudadanía de forma temporal o definitiva si incurre en alguno de los siguientes casos:</p>
         <ul>
             <li>Traición a Hernavia: colaborar con intereses que busquen dañar a Hernavia o destruir sus principios.</li>
-            <li>Violencia grave contra otros hernavianos: actos de agresión física, amenazas o acciones que atenten contra la seguridad de la comunidad.</li>
-            <li>Incumplimiento reiterado de deberes: negarse de manera continua e injustificada a aportar o participar en decisiones colectivas.</li>
-            <li>Engaño en el registro: falsificación de identidad o manipulación de documentos de ciudadanía.</li>
-            <li>Actos ilegales: cualquier conducta sancionable conforme a la ley.</li>
-            <li>Daño a la comunidad: acciones que generen perjuicio directo a la colectividad o a sus bienes comunes.</li>
-            <li>Decisión voluntaria: si un ciudadano solicita abandonar su ciudadanía.</li>
+            <li>Violencia grave contra otros hernavianos.</li>
+            <li>Incumplimiento reiterado de deberes.</li>
+            <li>Engaño en el registro.</li>
+            <li>Actos ilegales.</li>
+            <li>Daño a la comunidad.</li>
+            <li>Decisión voluntaria: renuncia del ciudadano.</li>
         </ul>
-        <p>Nota: En casos especiales, algunas de estas razones podrán ser consideradas para penalización distinta según lo dictamine el Arconte, sin implicar revocación directa.</p>
+        <p>Nota: El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
 
         <h2>Ley 2 – Aporte Obligatorio</h2>
         <ul>
-            <li>Trabajo comunitario: construcción, mantenimiento, apoyo agrícola, etc.</li>
-            <li>Aporte de conocimientos: enseñanza, innovación, asesoría técnica, etc.</li>
-            <li>Aporte de recursos: dinero, materiales, herramientas, etc.</li>
-            <li>Servicio comunitario: cuidado, seguridad, cultura, justicia, etc.</li>
+            <li>Trabajo comunitario.</li>
+            <li>Aporte de conocimientos.</li>
+            <li>Aporte de recursos.</li>
+            <li>Servicio comunitario.</li>
         </ul>
 
         <h2>Ley 3 – Penalizaciones</h2>
         <ul>
-            <li>Aumento de lo mínimo obligatorio del aporte.</li>
+            <li>Aumento del aporte mínimo.</li>
             <li>Multa económica o equivalente en recursos.</li>
-            <li>Tareas obligatorias adicionales.</li>
-            <li>Suspensión temporal de participación en actividades.</li>
+            <li>Tareas adicionales obligatorias.</li>
+            <li>Suspensión temporal de actividades.</li>
             <li>Exclusión de servicios comunitarios.</li>
             <li>Revocación temporal o definitiva de la ciudadanía.</li>
             <li>Penalización especial por daños a los símbolos de Hernavia.</li>
@@ -67,32 +67,30 @@
 
         <h2>Ley 4 – Participación Ciudadana</h2>
         <ul>
-            <li>Votaciones comunitarias: convocadas por el Arconte para asuntos de importancia general; cada ciudadano tendrá un voto igualitario.</li>
-            <li>Iniciativas ciudadanas: grupos de al menos tres ciudadanos pueden presentar propuestas; con el voto físico de al menos el 10% de los ciudadanos deberá ser revisada.</li>
-            <li>Asambleas representativas: la comunidad, a través de algunos representantes por vereda, podrá realizar una asamblea junto al Arconte con un 10% de votos ciudadanos físicos para discutir temas de interés general.</li>
+            <li>Votaciones comunitarias con voto igualitario.</li>
+            <li>Iniciativas ciudadanas: propuestas por grupos de al menos 3 ciudadanos y revisadas si alcanzan 10% de votos físicos.</li>
+            <li>Asambleas representativas: con al menos 10% de votos físicos por vereda junto al Arconte.</li>
         </ul>
-        <p>Nota: Los menores tendrán voto, pero este contará como medio voto.</p>
+        <p>Nota: Los menores tienen medio voto.</p>
 
         <h2>Ley 5 – Regulación de Fondos y Recursos</h2>
         <ul>
-            <li>Los aportes económicos o materiales serán administrados por el Arconte.</li>
-            <li>El Arconte debe rendir cuentas al menos una vez al año o cuando lo solicite la comunidad mediante votación.</li>
+            <li>Los aportes son administrados por el Arconte.</li>
+            <li>Rendición de cuentas al menos una vez al año o cuando lo solicite la comunidad.</li>
         </ul>
 
         <h2>Ley 6 – Inactividad de Ciudadanos Hernavianos</h2>
-<p>Todo ciudadano que permanezca inactivo durante dos meses sin participar en actividades, votaciones o aportar a Hernavia— recibirá un aviso sobre su estatus. Si la inactividad continúa durante un tercer mes, su ciudadanía será suspendida temporalmente, pudiendo recuperarla al participar en cualquier actividad oficial dentro del mes siguiente.</p>
-
-<p>La reincidencia será observada: tras una tercera suspensión injustificada, el ciudadano perderá su ciudadanía por un periodo de seis meses. La inactividad podrá justificarse si existe un motivo válido.</p>
+        <p>Inactividad de 2 meses: aviso de estatus. 3er mes: suspensión temporal. Recuperable participando en cualquier actividad oficial dentro del mes siguiente. Tras tercera suspensión injustificada: pérdida por 6 meses. Se justificará por motivos válidos.</p>
 
         <h2>Ley 7 – Eliminación de Datos</h2>
-        <p>Tras la revocación o renuncia de la ciudadanía, los datos personales del ciudadano deberán ser eliminados y su número de identificación expropiado en un plazo máximo de 30 días.</p>
+        <p>Tras revocación o renuncia, los datos personales serán eliminados en un máximo de 30 días.</p>
 
-        <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes Transitorias y demás documentos de Hernavia, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+        <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
     </section>
 </main>
 
 <footer>
-    &copy; 2025 Hernavia - Proyecto Cultural
+    &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
 
 </body>
