--- a/carta.html
+++ b/carta.html
@@ -122,6 +122,9 @@
 
             <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
         </section>
+        
+        <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
+
     </main>
 
     <footer>
