--- a/carta.html
+++ b/carta.html
@@ -123,8 +123,9 @@
             <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
         </section>
         
+         <section>
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
-
+ </section>
     </main>
 
     <footer>
