--- a/carta.html
+++ b/carta.html
@@ -115,17 +115,17 @@
                 y las leyes del país donde se encuentre el ciudadano.
             </p>
 
-            <h3>Artículo 6 – Símbolos</h3>
-            <h4>Bandera</h4>
-            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
-            <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
+    <h3>Artículo 6 – Símbolos</h3>
+    <h4>Bandera</h4>
+    <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
+    <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
-            <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
-        </section>
-        
-         <section>
+    <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
+
+    <p style="text-align:center; margin-top:20px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
- </section>
+    </p>
+</section>
     </main>
 
     <footer>
