--- a/leyes.html
+++ b/leyes.html
@@ -86,6 +86,10 @@
         <p>Tras revocación o renuncia, los datos personales serán eliminados en un máximo de 30 días.</p>
 
         <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+         <p style="text-align:center; margin-top:20px;">
+        <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
+    </p>
+</section>
     </section>
 </main>
 
