--- a/simbolos.html
+++ b/simbolos.html
@@ -1,65 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Símbolos - Hernavia</title>
-<meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema y himno que representan la identidad de nuestra comunidad.">
-<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-<link rel="preload" href="estilo.css" as="style">
-<link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/simbolos.html">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Proyecto Hernavia">
-
-<style>
-    .simbolos-section {
-        max-width: 900px;
-        margin: 20px auto;
-        padding: 20px;
-    }
-    section {
-        min-height: 250px; /* mismo alto que otras páginas */
-        padding: 20px;
-        border-left: 8px solid #006A44;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        background-color: white;
-        margin-bottom: 20px;
-    }
-    .himno p {
-        margin-bottom: 15px;
-        line-height: 1.6;
-        text-align: justify;
-    }
-    .bandera {
-        width: 300px;
-        height: auto;
-        display: block;
-        margin: 15px auto;
-    }
-    .section-lema {
-        min-height: 200px;
-    }
-</style>
-</head>
-
-<body>
-<header>
-    <h1>Símbolos de Hernavia</h1>
-</header>
-
-<nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
-</nav>
-
 <main class="simbolos-section">
     <section>
         <h2>Himno de Hernavia</h2>
@@ -110,7 +48,8 @@
 </main>
 
 <footer>
-    &copy; 2025 Hernavia - Proyecto Cultural
+    &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
+
 </body>
 </html>
