--- a/documentos.html
+++ b/documentos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentación de Hernavia</title>
-    <meta name="description" content="Descubre los documentos iniciales de Hernavia para saber en qué se rige este proyecto.">
+    <title>Documentos de Hernavia</title>
+    <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
@@ -18,12 +18,11 @@
         <h1>Documentos de Hernavia</h1>
     </header>
 
-    <!-- Nav incrustado -->
     <nav class="nav-comun">
         <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
         <a href="documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
-        <a href="Consultas.html">Consultas</a>
+        <a href="consultas.html">Consultas</a>
         <a href="simbolos.html">Símbolos</a>
         <a href="comounirse.html">¿Cómo unirse?</a>
         <a href="sugerencias.html">Sugerencias</a>
@@ -31,26 +30,25 @@
     </nav>
 
     <main>
-        <section class="section">
+        <section class="section texto-largo">
             <h2>Carta Fundacional</h2>
-            <p>La Carta Fundacional de Hernavia es un documento corto, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-            <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales, como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, la búsqueda de innovación y la fraternidad con otras culturas.</p>
+            <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+            <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
             <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
-            <p>La Carta dedica un espacio a los símbolos de Hernavia, en especial la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.</p>
-            <a href="carta.html" class="boton">Leer carta completa</a>
+            <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
+            <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
         </section>
 
-        <section class="section">
+        <section class="section texto-largo">
             <h2>Leyes Transitorias</h2>
             <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
             <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-         <a href="leyes.html" class="boton">Leer las leyes completas</a>
-
+            <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
         </section>
     </main>
 
     <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
+        &copy; 2025 Hernavia — Proyecto Cultural
     </footer>
 </body>
 </html>
