--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
     </section>
 
-    <section id="texto-largo">
+    <section id="donde" class="texto-largo">>
       <h2>¿Dónde se encuentra?</h2>
       <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración.
       actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
@@ -68,5 +68,6 @@
 
 </body>
 </html>
+
 
 
