--- a/sugerencias.html
+++ b/sugerencias.html
@@ -5,86 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sugerencias - Hernavia</title>
     <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
-    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="icon" type="image/png" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="stylesheet" href="estilo.css">
-     <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
-    <style>
-        .section {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            border-left: 8px solid #006A44;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 150px; /* Evita CLS */
-        }
-        form {
-            max-width: 600px;
-            margin: 20px auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-        form input, form textarea {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 1em;
-        }
-        form button {
-            padding: 12px;
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-        form button:hover {
-            background-color: #004a2d;
-        }
-        label { font-weight: bold; }
-
-        .frase-futuro {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 1.1em;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-        .frase-futuro img {
-            width: 32px;
-            height: 32px;
-        }
-        .audio-boton {
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 14px;
-            cursor: pointer;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
-        }
-        .audio-boton:hover {
-            background-color: #004a2d;
-        }
-    </style>
 </head>
 
 <body>
-
 <header>
     <h1>Envíanos tus sugerencias</h1>
 </header>
 
-<!-- Navegación directa -->
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -96,41 +28,34 @@
     <a href="noticias-random.html">Noticias Random</a>
 </nav>
 
-<section class="section">
-    <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor envíanos un mensaje:</p>
+<main>
+    <section class="section">
+        <p>Si tienes ideas, sugerencias o preguntas para mejorar Hernavia, envíanos un mensaje:</p>
 
-    <div class="frase-futuro">
-        <img src="puedenideas.png" alt="Icono ideas">
-        ¿Puedes cambiar el futuro?
-    </div>
+        <form action="https://formspree.io/f/xldpgjop" method="POST">
+            <label for="nombre">Nombre (opcional):</label>
+            <input type="text" id="nombre" name="nombre">
 
-    <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ ¿?</button>
-    <audio id="audio-futuro" src="futuro.mp3"></audio>
+            <label for="correo">Correo (opcional):</label>
+            <input type="email" id="correo" name="correo">
 
-    <form action="https://formspree.io/f/xldpgjop" method="POST">
-        <label for="nombre">Nombre (opcional):</label>
-        <input type="text" id="nombre" name="nombre">
+            <label for="asunto">Asunto:</label>
+            <input type="text" id="asunto" name="asunto" required>
 
-        <label for="correo">Correo (opcional):</label>
-        <input type="email" id="correo" name="correo">
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
 
-        <label for="asunto">Asunto:</label>
-        <input type="text" id="asunto" name="asunto" required>
+            <button type="submit" class="boton">Enviar sugerencia</button>
+        </form>
 
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
-        <button type="submit">Enviar sugerencia</button>
-    </form>
-
-    <p>O también puedes visitar nuestras redes sociales:</p>
-    <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">https://www.instagram.com/hernaviaoficial</a></p>
-    <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">https://www.youtube.com/@Hernaviaoficial</a></p>
-</section>
+        <p>O también puedes visitarnos en nuestras redes sociales:</p>
+        <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">hernaviaoficial</a></p>
+        <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">Hernavia Oficial</a></p>
+    </section>
+</main>
 
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
-
 </body>
 </html>
