--- a/carta.html
+++ b/carta.html
@@ -3,134 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carta Fundacional - Hernavia</title>
-    <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
+    <title>Sugerencias - Hernavia</title>
+    <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
+    <link rel="icon" type="image/png" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
-    <link rel="manifest" href="manifest.json">
-    <style>
-        section.carta {
-            min-height: 600px;
-            line-height: 1.6;
-            text-align: justify;
-            padding: 20px;
-            max-width: 900px;
-            margin: 20px auto;
-            background-color: white;
-            border-left: 8px solid #006A44;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        section.carta h2, section.carta h3, section.carta h4 {
-            color: #006A44;
-        }
-        .bandera {
-            display: block;
-            width: 300px;
-            height: auto;
-            aspect-ratio: 3/2;
-            margin: 15px auto;
-            border: 4px solid #006A44;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 
 <body>
-    <header>
-        <h1>Carta Fundacional de Hernavia</h1>
-    </header>
+<header>
+    <h1>Envíanos tus sugerencias</h1>
+</header>
 
-    <nav class="nav-comun">
-        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-        <a href="documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="consultas.html">Consultas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
-        <a href="sugerencias.html">Sugerencias</a>
-        <a href="noticias-random.html">Noticias Random</a>
-    </nav>
+<nav class="nav-comun">
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="documentos.html">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
+    <a href="noticias-random.html">Noticias Random</a>
+</nav>
 
-    <main>
-        <section class="carta">
-            <h2>Preámbulo</h2>
-            <p>
-                Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
-                de respeto, justicia, innovación, progreso y fraternidad.
+<main>
+    <section class="section">
+        <h2>Formulario de Sugerencias</h2>
+        <p>Si tienes ideas, sugerencias o preguntas para mejorar Hernavia, envíanos un mensaje:</p>
+
+        <form action="https://formspree.io/f/xldpgjop" method="POST">
+            <label for="nombre">Nombre (opcional):</label>
+            <input type="text" id="nombre" name="nombre">
+
+            <label for="correo">Correo (opcional):</label>
+            <input type="email" id="correo" name="correo">
+
+            <label for="asunto">Asunto:</label>
+            <input type="text" id="asunto" name="asunto" required>
+
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+
+            <p style="text-align:center; margin-top:20px;">
+                <button type="submit" class="boton-hernavia">Enviar sugerencia</button>
             </p>
+        </form>
+    </section>
 
-            <h3>Artículo 1 – Liderazgo</h3>
-            <p>
-                El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
-                Tendrá poder total para tomar decisiones administrativas, políticas y sociales
-                mientras Hernavia consolida sus instituciones.
-                El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.
-            </p>
+    <section class="section">
+        <h2>Redes Sociales</h2>
+        <p>Puedes seguirnos y contactarnos también a través de nuestras redes:</p>
+        <ul>
+            <li>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">hernaviaoficial</a></li>
+            <li>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">Hernavia Oficial</a></li>
+        </ul>
 
-            <h3>Artículo 2 – Principios Fundamentales</h3>
-            <ol>
-                <li>Respeto y dignidad hacia los demás ciudadanos.</li>
-                <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
-                <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
-                <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
-                <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
-                <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
-            </ol>
+        <p style="text-align:center; margin-top:20px;">
+            <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
+        </p>
+    </section>
+</main>
 
-            <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
-            <ol>
-                <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
-                <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
-                <li>Defender la paz y rechazar la violencia injustificada.</li>
-                <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
-                <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
-                <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
-            </ol>
-
-            <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
-            <p>
-                La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente
-                como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación”
-                y la frase “Nacidos de un sueño, luchando por cumplirlo”.
-            </p>
-            <p>Los objetivos iniciales de Hernavia serán:</p>
-            <ol>
-                <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
-                <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
-                <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
-                <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
-            </ol>
-
-            <h3>Artículo 5 – Carácter Transitorio</h3>
-            <p>
-                Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
-                crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
-                con la participación del pueblo.
-                Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente,
-                y las leyes del país donde se encuentre el ciudadano.
-            </p>
-
-    <h3>Artículo 6 – Símbolos</h3>
-    <h4>Bandera</h4>
-    <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
-    <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
-
-    <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
-
-    <p style="text-align:center; margin-top:20px;">
-        <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
-    </p>
-</section>
-    </main>
-
-    <footer>
-        &copy; 2025 Hernavia — Proyecto Cultural
-    </footer>
-
+<footer>
+    &copy; 2025 Hernavia — Proyecto Cultural
+</footer>
 </body>
 </html>
