--- a/carta.html
+++ b/carta.html
@@ -3,150 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sugerencias - Hernavia</title>
-    <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
+    <title>Carta Fundacional - Hernavia</title>
+    <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    
-    <!-- CSS no bloqueante -->
-    <link rel="preload" href="estilo.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="estilo.css"></noscript>
-
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
-
+    <link rel="manifest" href="manifest.json">
     <style>
-        section.sugerencias {
+        section.carta {
+            min-height: 600px;
+            line-height: 1.6;
+            text-align: justify;
+            padding: 20px;
             max-width: 900px;
             margin: 20px auto;
-            padding: 20px;
             background-color: white;
             border-left: 8px solid #006A44;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 250px;
         }
-
-        form {
-            max-width: 600px;
-            margin: 20px auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+        section.carta h2, section.carta h3, section.carta h4 {
+            color: #006A44;
         }
-
-        form input, form textarea {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 1em;
-        }
-
-        form button {
-            padding: 12px;
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-
-        form button:hover {
-            background-color: #004a2d;
-        }
-
-        label { font-weight: bold; }
-
-        .frase-futuro {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 1.1em;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-
-        .frase-futuro img {
-            width: 32px;
-            height: 32px;
-        }
-
-        .audio-boton {
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 14px;
-            cursor: pointer;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
-        }
-
-        .audio-boton:hover {
-            background-color: #004a2d;
+        .bandera {
+            display: block;
+            width: 300px;
+            height: auto;
+            aspect-ratio: 3/2;
+            margin: 15px auto;
+            border: 4px solid #006A44;
+            border-radius: 8px;
         }
     </style>
 </head>
 
 <body>
+    <header>
+        <h1>Carta Fundacional de Hernavia</h1>
+    </header>
 
-<header>
-    <h1>Envíanos tus sugerencias</h1>
-</header>
+    <nav class="nav-comun">
+        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+        <a href="documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="consultas.html">Consultas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="sugerencias.html">Sugerencias</a>
+        <a href="noticias-random.html">Noticias Random</a>
+    </nav>
 
-<nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
-</nav>
+    <main>
+        <section class="carta">
+            <h2>Preámbulo</h2>
+            <p>
+                Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
+                de respeto, justicia, innovación, progreso y fraternidad.
+            </p>
 
-<main>
-    <section class="sugerencias">
-        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor envíanos un mensaje:</p>
+            <h3>Artículo 1 – Liderazgo</h3>
+            <p>
+                El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
+                Tendrá poder total para tomar decisiones administrativas, políticas y sociales
+                mientras Hernavia consolida sus instituciones.
+                El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.
+            </p>
 
-        <div class="frase-futuro">
-            <img src="puedenideas.png" alt="Icono ideas">
-            ¿Puedes cambiar el futuro?
-        </div>
+            <h3>Artículo 2 – Principios Fundamentales</h3>
+            <ol>
+                <li>Respeto y dignidad hacia los demás ciudadanos.</li>
+                <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
+                <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
+                <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
+                <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
+                <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
+            </ol>
 
-        <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ ¿?</button>
-        <audio id="audio-futuro" src="futuro.mp3"></audio>
+            <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
+            <ol>
+                <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
+                <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
+                <li>Defender la paz y rechazar la violencia injustificada.</li>
+                <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
+                <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
+                <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
+            </ol>
 
-        <form action="https://formspree.io/f/xldpgjop" method="POST">
-            <label for="nombre">Nombre (opcional):</label>
-            <input type="text" id="nombre" name="nombre">
+            <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
+            <p>
+                La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente
+                como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación”
+                y la frase “Nacidos de un sueño, luchando por cumplirlo”.
+            </p>
+            <p>Los objetivos iniciales de Hernavia serán:</p>
+            <ol>
+                <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
+                <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
+                <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
+                <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
+            </ol>
 
-            <label for="correo">Correo (opcional):</label>
-            <input type="email" id="correo" name="correo">
+            <h3>Artículo 5 – Carácter Transitorio</h3>
+            <p>
+                Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
+                crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
+                con la participación del pueblo.
+                Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente,
+                y las leyes del país donde se encuentre el ciudadano.
+            </p>
 
-            <label for="asunto">Asunto:</label>
-            <input type="text" id="asunto" name="asunto" required>
+            <h3>Artículo 6 – Símbolos</h3>
+            <h4>Bandera</h4>
+            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
+            <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+            <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
 
             <p style="text-align:center; margin-top:20px;">
-                <button type="submit">Enviar sugerencia</button>
+                <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
             </p>
-        </form>
+        </section>
+    </main>
 
-        <p>O también puedes visitar nuestras redes sociales:</p>
-        <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">https://www.instagram.com/hernaviaoficial</a></p>
-        <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">https://www.youtube.com/@Hernaviaoficial</a></p>
-    </section>
-</main>
-
-<footer>
-    &copy; 2025 Hernavia - Proyecto Cultural
-</footer>
+    <footer>
+        &copy; 2025 Hernavia — Proyecto Cultural
+    </footer>
 
 </body>
 </html>
