--- a/noticias-random.html
+++ b/noticias-random.html
@@ -6,30 +6,11 @@
     <title>Noticias Random - Hernavia</title>
     <meta name="description" content="Noticias aleatorias y curiosas de Hernavia y del mundo. Aquí encontrarás novedades y datos curiosos que no entran en otras categorías.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
-     <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias-random.html">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias-random.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
-    <style>
-        .section {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            border-left: 8px solid #006A44;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 150px; /* Evita CLS */
-        }
-        .section h2 {
-            color: #006A44;
-            margin-bottom: 10px;
-        }
-        .section p {
-            line-height: 1.6;
-            text-align: justify;
-        }
-    </style>
 </head>
 <body>
 
@@ -48,23 +29,25 @@
     <a href="noticias-random.html">Noticias Random</a>
 </nav>
 
-<section class="section" id="noticias-dia">
-    <h2>Noticias del día</h2>
-    <p>Hoy 5 de octubre de 2025 feliz mes de octubre no hay noticias por ahora.</p>
-</section>
+<main>
+    <section class="section">
+        <h2>Noticias del día</h2>
+        <p>Hoy 5 de octubre de 2025 feliz mes de octubre, no hay noticias por ahora.</p>
+    </section>
 
-<section class="section" id="noticias-mundo">
-    <h2>Noticias del mundo</h2>
-    <p>Hoy no hay nada interesante.</p>
-</section>
+    <section class="section">
+        <h2>Noticias del mundo</h2>
+        <p>Hoy no hay nada interesante.</p>
+    </section>
 
-<section class="section" id="curiosidades">
-    <h2>Curiosidades Random</h2>
-    <p>Aquí se mostrarán curiosidades, datos curiosos o cualquier noticia fuera de lo común.</p>
-</section>
+    <section class="section">
+        <h2>Curiosidades Random</h2>
+        <p>Aquí se mostrarán curiosidades, datos curiosos o cualquier noticia fuera de lo común.</p>
+    </section>
+</main>
 
 <footer>
-    <p>&copy; 2025 Hernavia - Proyecto Cultural</p>
+    &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
 </body>
