--- a/identidad.html
+++ b/identidad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Identidad Hernaviana</title>
+    <title>Identidad Hernaviana - Hernavia</title>
     <meta name="description" content="Mira qué significa ser parte de Hernavia y el valor de nuestra identidad.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
@@ -11,34 +11,13 @@
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/identidad.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
-
-    <style>
-        .texto-largo, section p, section li {
-            margin-bottom: 0.6em;
-            line-height: 1.4;
-        }
-        .bandera {
-            display: block;
-            margin: 20px auto;
-            max-width: 283px; 
-            height: auto;
-        }
-        main section {
-            min-height: 150px; 
-        }
-        nav.nav-comun a {
-            text-decoration: none;
-            color: #006A44;
-            margin-right: 15px;
-        }
-    </style>
 </head>
 <body>
 
-<header role="banner">
+<header>
     <h1>La Identidad Hernaviana</h1>
 </header>
-    
+
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -50,8 +29,8 @@
     <a href="noticias-random.html">Noticias Random</a>
 </nav>
 
-<main role="main">
-    <section>
+<main>
+    <section class="section">
         <h2>¿Qué significa unirse?</h2>
         <p class="texto-largo">
             Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
@@ -59,7 +38,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="section">
         <h2>Principios de la Identidad Hernaviana</h2>
         <ul>
             <li>Paz hernaviana: Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
@@ -68,17 +47,17 @@
         </ul>
     </section>
 
-    <section>
+    <section class="section">
         <h2>Más que un símbolo</h2>
         <p class="texto-largo">
             La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos,  
             son colores para enorgullecerse, para gritar y para seguir.  
-            Imagina un partido de futbol donde grites por Hernavia y sus colores.  
+            Imagina un partido de fútbol donde grites por Hernavia y sus colores.  
             ¿Te emociona esa idea o tienes otra en mente?
         </p>
     </section>
 
-    <section>
+    <section class="section">
         <h2>La esencia hernaviana</h2>
         <p class="texto-largo">
             La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
@@ -91,7 +70,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="section" style="text-align:center;">
         <p>Recuérdala, tal vez un día no puedas olvidarla.</p>
         <img src="img/bandera.png" 
              alt="Bandera Hernavia, identidad cultural relacionada con afrocolombianidad hernaviana" 
@@ -102,10 +81,9 @@
     </section>
 </main>
 
-<footer role="contentinfo">
+<footer>
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
 </body>
 </html>
-
