--- a/sugerencias.html
+++ b/sugerencias.html
@@ -113,7 +113,7 @@
         <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor envíanos un mensaje:</p>
 
         <div class="frase-futuro">
-            <img src="puedenideas.png" alt="Icono ideas">
+            <img src="img/puedenideas.png" alt="Icono ideas">
             ¿Puedes cambiar el futuro?
         </div>
 
